Nov 17, 2023
  updated to java 17

Apr 14, 2023
  updated jar dependencies

Apr 03, 2023
  removed Harika from email list -- Harika is no longer with RGD

Jan 27, 2023
  updated build.gradle to be gradle 6.x + compatible

Nov 12, 2021
  added loading of scaffolds; implemented parallel loading

Nov 11, 2021
  added loading of data from UCSC synteny chain net files

May 10, 2020
  updated jar dependencies

v. 1.0.0, Sep 11, 2019
  -first pipeline version, generate synteny blocks for all species