@@ -21,14 +21,16 @@ repositories {
 }
 
 dependencies {
-    implementation ('org.apache.commons:commons-dbcp2:2.11.0') {
+    implementation ('org.apache.commons:commons-dbcp2:2.12.0') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'commons-net:commons-net:3.7.2'
-    implementation 'org.apache.httpcomponents:httpclient:4.5.14'
+    implementation 'commons-net:commons-net:3.8.0'
+    implementation ('org.apache.httpcomponents:httpclient:4.5.14') {
+        exclude group: 'commons-logging', module: 'commons-logging'
+    }
     implementation 'log4j:log4j:1.2.17'
-    implementation 'com.oracle.database.jdbc:ojdbc10:19.21.0.0'
-    implementation 'org.springframework:spring-jdbc:6.0.14'
+    implementation 'com.oracle.database.jdbc:ojdbc10:19.22.0.0'
+    implementation 'org.springframework:spring-jdbc:6.1.14'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
